adding more build and analysis files

--- a/import/import_data.ipynb
+++ b/import/import_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,10 +75,8 @@
     "# FILE_PATH = '../data/'\n",
     "files = [\n",
     "    'goodreads_books', \n",
-    "    'goodreads_book_authors', \n",
-    "    # 'goodreads_book_genres_initial',\n",
-    "    # 'goodreads_book_works'\n",
-    "        ]\n",
+    "    'goodreads_book_authors'\n",
+    "]\n",
     "\n",
     "chunked = pd.read_json(f'{FILE_PATH}{files[0]}.json.gz', \n",
     "                       lines=True, \n",
@@ -219,6 +217,47 @@
     "    counter += 1\n",
     "\n",
     "    # break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FILE_PATH = 'https://datarepo.eng.ucsd.edu/mcauley_group/gdrive/goodreads/'\n",
+    "# FILE_PATH = '../data/'\n",
+    "files = [\n",
+    "    'goodreads_books', \n",
+    "    'goodreads_book_authors'\n",
+    "]\n",
+    "\n",
+    "data = pd.read_json(f'{FILE_PATH}{files[1]}.json.gz', \n",
+    "                    lines=True, \n",
+    "                    compression='gzip')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "529"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.to_sql('goodreads_book_authors',\n",
+    "            engine,\n",
+    "            index=False)"
    ]
   }
  ],
